--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Cascaras/agradecimientos.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Cascaras/agradecimientos.tex
@@ -45,6 +45,10 @@
 
 %ACA VAN
 
+\newpage
+\thispagestyle{empty}
+\mbox{ }
+
 \endinput
 % Variable local para emacs, para  que encuentre el fichero maestro de
 % compilación y funcionen mejor algunas teclas rápidas de AucTeX
