--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Cascaras/bibliografia.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Cascaras/bibliografia.tex
@@ -51,7 +51,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \setBibFiles{%
 %deeplearning,spark,eeg,learninspy,%
-citasCapitulo1,citasCapitulo2%
+citasCapitulo1%
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -64,16 +64,6 @@ citasCapitulo1,citasCapitulo2%
 % Si no se quiere cita, se puede eliminar su definición (en la
 % macro setCitaBibliografia{} ).
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\setCitaBibliografia{
-\begin{FraseCelebre}
-\begin{Frase}
-	Cuando bebas agua, recuerda la fuente.
-\end{Frase}
-\begin{Fuente}
-	Proverbio chino
-\end{Fuente}
-\end{FraseCelebre}
-}
 
 %%
 %% Creamos la bibliografia
