--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Cascaras/resumen.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Cascaras/resumen.tex
@@ -31,6 +31,10 @@ Con la finalidad de independizar los datos que representan el núcleo del proyect
 \smallskip
 \noindent \textbf{Palabras claves:} Encuestas, Aplicación Móvil, Web Service, Geo-Referencias, Epidemiología, GPS, Endpoint.
 
+\newpage
+\thispagestyle{empty}
+\mbox{ }
+
 \endinput
 % Variable local para emacs, para  que encuentre el fichero maestro de
 % compilación y funcionen mejor algunas teclas rápidas de AucTeX
