--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Tesis.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Tesis.tex
@@ -118,15 +118,11 @@ constantes,guionado,Cascaras/bibliografia,config%
 
 \include{Cascaras/cover}
 
-%\include{Cascaras/dedicatoria}
-
 \include{Cascaras/agradecimientos}
 
-\newpage
-\thispagestyle{empty}
-\mbox{ }
-
 \include{Cascaras/resumen}
+
+\include{Cascaras/prefacio}
 
 \ifx\generatoc\undefined
 \else
@@ -139,7 +135,7 @@ constantes,guionado,Cascaras/bibliografia,config%
 \restauraCabecera
 
 %\include{Capitulos/Parte1}
-%\include{Capitulos/01Capitulo1}
+\include{Capitulos/01Capitulo1}
 %\include{Capitulos/01Capitulo2}
 %\include{Capitulos/01Capitulo3}
 %\include{Capitulos/Parte2}
