--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
@@ -1,232 +1,6 @@
-%-- Libros
-@book{gonzalezWoods,
-	title={Digital Image Processing, 3rd. ed.},
-	author={Rafael C. Gonz{\'a}lez and Richard E.Woods},
-	year={2008},
-	publisher={Prentice-Hall}
-}
-
-@book{haseman2009android,
-	title={Android Essentials},
-	author={Haseman, Chris},
-	year={2009},
-	publisher={Apress}
-}
-
-@book{chollet2017deep,
-	title={Deep learning with python},
-	author={Chollet, Francois},
-	year={2017},
-	publisher={Manning Publications Co.}
-}
-
-@book{alpaydin2009introduction,
-	title={Introduction to machine learning},
-	author={Alpaydin, Ethem},
-	year={2009},
-	publisher={MIT press}
-}
-
-@book{kogan2007introduction,
-	title={Introduction to clustering large and high-dimensional data},
-	author={Kogan, Jacob},
-	year={2007},
-	publisher={Cambridge University Press}
-}
-
-@misc{dimarzio2008programmer,
-	title={Programmers Guide},
-	author={DiMarzio, JF and Android, A},
-	year={2008},
-	publisher={Chicago: McGraw-Hill}
-}
-
-%-- Papers
-@inproceedings{le2013building,
-	title={Building high-level features using large scale unsupervised learning},
-	author={Le, Quoc V},
-	booktitle={Acoustics, Speech and Signal Processing (ICASSP), 2013 IEEE International Conference on},
-	pages={8595--8598},
-	year={2013},
-	organization={IEEE}
-}
-
-@inproceedings{taigman2014deepface,
-	title={Deepface: Closing the gap to human-level performance in face verification},
-	author={Taigman, Yaniv and Yang, Ming and Ranzato, Marc'Aurelio and Wolf, Lior},
-	booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
-	pages={1701--1708},
-	year={2014}
-}
-
-
-%-- Articulos
-
-@misc{organize2017google,
-	title = {How Google Photos uses machine learning to create customized albums},
-	author = {Max Lewontin},
-	howpublished = {\url{https://www.csmonitor.com/Technology/2016/0324/How-Google-Photos-uses-machine-learning-to-create-customized-albums/}},
-	note = {Accedido: 02/10/2018}
-}
-
-@misc{androidVSios,
-	title = {{Android vs iOS: quien gana la batalla}},
-	author = {La redaccion},
-	howpublished = {\url{https://www.lanacion.com.ar/1900814-android-vs-ios-quien-gana-la-batalla}},
-	note = {Accedido: 07/04/2017}
-}
-
-@misc{numberAndroidApps,
-	title = {{Number of Android Apps on Google Play}},
-	author = {AppBrain},
-	howpublished = {\url{https://www.appbrain.com/stats/number-of-android-apps}},
-	note = {Accedido: 15/10/2018}
-}
-
-
-@misc{boomML,
-	author = {Steve Lohr},
-	title = {IBM Is Counting on Its Bet on Watson, and Paying Big Money for It},
-	howpublished = {\url{https://www.nytimes.com/2016/10/17/technology/ibm-is-counting-on-its-bet-on-watson-and-paying-big-money-for-it.html}},
-	note = {Online, Accedido: 01/11/2018},
-	year = 2016
-}
-@misc{historyML,
-	author = {Victor Gonzalez},
-	title = {A Brief History of Machine Learning},
-	howpublished = {\url{http://www.synergicpartners.com/en/espanol-una-breve-historia-del-machine-learning}},
-	note = {Online, Accedido: 15/09/2018},
-	year = 2018
-}
-
-@misc{AImobileTechnology,
-	author = {Mantra Malhotra},
-	title = {How Artificial Intelligence (AI) is transforming mobile technology?},
-	howpublished = {\url{https://hackernoon.com/how-artificial-intelligence-ai-is-transforming-mobile-technology-9f810d734d35}},
-	note = {Online, Accedido: 13/08/2018},
-	year = 2018
-}
-
-@misc{nativeApplications,
-	author = {OK Hosting},
-	title = {Ventajas y Desventajas de las Aplicaciones Moviles Nativas},
-	howpublished = {\url{https://okhosting.com/blog/ventajas-desventajas-de-las-aplicaciones-moviles-nativas}},
-	note = {Online, Accedido: 22/01/2018},
-	year = 2017
-}
-
-@misc{appSigning,
-	author = {Android},
-	title = {Firmar tu aplicacion},
-	howpublished = {\url{https://developer.android.com/studio/publish/app-signing}},
-	note = {Online, Accedido: 18/03/2018},
-	year = 2018
-}
-
-@misc{appFundamentals,
-	author = {Android},
-	title = {Aspectos fundamentales de la aplicacion},
-	howpublished = {\url{https://developer.android.com/guide/components/fundamentals}},
-	note = {Online, Accedido: 30/03/2018},
-	year = 2018
-}
-
-@misc{androidRuntimeART,
-	author = {Android},
-	title = {{ART and Dalvik}},
-	howpublished = {\url{https://source.android.com/devices/tech/dalvik}},
-	note = {Online, Accedido: 14/05/2018},
-	year = 2018
-}
-
-@misc{programacionMobile,
-	author = {Carlos Casado},
-	title = {Alternativas en la programacion para dispositivos moviles},
-	howpublished = {\url{http://multimedia.uoc.edu/blogs/fem/es/alternativas-en-la-programacion-para-dispositivos-moviles/}},
-	note = {Online, Accedido: 30/09/2018},
-	year = 2017
-}
-
-
-@misc{androidStudioOficial,
-	author = {Alejandro Bermudez},
-	title = {{Android Studio 2.0 ya es oficial}},
-	howpublished = {\url{https://andro4all.com/2016/04/android-studio-2-0-novedades-caracteristicas}},
-	note = {Online, Accedido: 26/10/2017},
-	year = 2016
-}
-
-@misc{appsLifeCycle,
-	author = {Android},
-	title = {Actividades},
-	howpublished = {\url{https://developer.android.com/guide/components/activities}},
-	note = {Online, Accedido: 26/10/2018},
-	year = 2018
-}
-
-@misc{introCNN,
-	author = {{TensorFlow}},
-	title = {{Intro to Convolutional Neural Networks}},
-	howpublished = {\url{https://www.tensorflow.org/tutorials/estimators/cnn}},
-	note = {Online, Accedido: 15/02/2018},
-	year = 2018
-}
-
-@misc{DLOpenSourceLibraries,
-	author = {Dan Clark},
-	title = {{Top 16 Open Source Deep Learning Libraries and Platforms}},
-	howpublished = {\url{https://www.kdnuggets.com/2018/04/top-16-open-source-deep-learning-libraries.html}},
-	note = {Online, Accedido: 28/08/2018},
-	year = 2018
-}
-
-
-@inproceedings{abadi2016tensorflow,
-	title={Tensorflow: a system for large-scale machine learning.},
-	author={Abadi, Mart{\'\i}n and Barham, Paul and Chen, Jianmin and Chen, Zhifeng and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and Ghemawat, Sanjay and Irving, Geoffrey and Isard, Michael and others},
-	booktitle={OSDI},
-	volume={16},
-	pages={265--283},
-	year={2016}
-}
-
-@misc{TFliteOverview,
-	author = {{TensorFlow}},
-	title = {{Introduction to TensorFlow Lite}},
-	howpublished = {\url{https://www.tensorflow.org/lite/overview}},
-	note = {Online, Accedido: 11/06/2018},
-	year = 2018
-}
-
-
-%-- Papers
-
-@article{karami2017image,
-	title={Image matching using SIFT, SURF, BRIEF and ORB: performance comparison for distorted images},
-	author={Karami, Ebrahim and Prasad, Siva and Shehata, Mohamed},
-	journal={arXiv preprint arXiv:1710.02726},
-	year={2017}
-}
-
-@article{howard2017mobilenets,
-	title={Mobilenets: Efficient convolutional neural networks for mobile vision applications},
-	author={Howard, Andrew G and Zhu, Menglong and Chen, Bo and Kalenichenko, Dmitry and Wang, Weijun and Weyand, Tobias and Andreetto, Marco and Adam, Hartwig},
-	journal={arXiv preprint arXiv:1704.04861},
-	year={2017}
-}
-
-%-- Tesis 
-
-@phdthesis{learninspy2016tesis,
-	title    = {{Implementacion de un framework para la construccion de redes neuronales con aprendizaje profundo. Caso de aplicacion: clasificacion de seniales cerebrales}},
-	school   = {Universidad Nacional del Litoral},
-	author   = {Leandro Ferrado},
-	year     = {2016},
-	type     = {{Degree} dissertation}
-}
-
-@phdthesis{van2000graph,
-	title={Graph clustering by flow simulation},
-	author={Van Dongen, Stijn Marinus},
-	year={2000}
+@misc{poblacionEncuestas,
+	title = {?` {{Q}}u{\'e} son las encuestas y para qu{\'e} sirven?},
+	author = {Edgar Trejo},
+howpublished = {\url{http://simomexico.com/encuestas/}},
+note = {Accedido: 12/12/2018}
 }
