--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/01Capitulo1.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/01Capitulo1.tex
@@ -15,41 +15,47 @@ En el presente capítulo se detallarán las motivaciones que llevaron a la concepc
 \section{Motivación}
 %-------------------------------------------------------------------
 \label{cap1:sec:motivation}
-La realización de encuestas es una técnica sumamente utilizada a lo largo de los años, ya que se trata de una herramienta indispensable a la hora de obtener datos en relación a una determinada población de interés. Su realización es llevada a cabo sobre una muestra específica de la misma, la cual debe ser representativa, ya que a partir de allí los resultados serán generalizados hacia el resto de la población\cite{poblacionEncuestas}. Obteniendo como resultado una estimación con cierto grado de certeza sobre cuál es la tendencia de opinión. Ésto es llevado a cabo mediante diferentes estudios estadísticos de selección aleatoria, de manera tal que permita poseer un intervalo de confianza alto, es decir donde la tasa de error en relación a la muestra con la población total sea muy baja.
+La realización de encuestas es una técnica sumamente utilizada a lo largo de los años, ya que se trata de una herramienta indispensable a la hora de obtener datos en relación a una determinada población de interés. Su realización es llevada a cabo sobre una muestra específica de la misma, la cual debe ser representativa, ya que a partir de allí los resultados serán generalizados hacia el resto de la población \cite{poblacionEncuestas}. Obteniendo como resultado una estimación con cierto grado de certeza sobre cuál es la tendencia de opinión. Ésto es llevado a cabo mediante diferentes estudios estadísticos de selección aleatoria, de manera tal que permita poseer un intervalo de confianza alto, es decir donde la tasa de error en relación a la muestra con la población total sea muy baja.
 \\
 
-Hace ya unos años, la industria de la información y la tecnología (IT) está viviendo grandes logros y consiguiendo enormes inversiones monetarias en lo que refiere a ML. La realidad es que este campo no siempre ha sido tan prolífico, alternando épocas de altas expectativas y avances con ``inviernos'' donde sufría severos estancamientos. A partir del 2006, gracias al aumento de la potencia de cálculo junto con la gran abundancia de datos disponibles, han vuelto a lanzar el campo del aprendizaje maquinal. Numerosas empresas están transformando sus negocios hacia el dato y están incorporando estas técnicas en sus procesos, productos y servicios para obtener ventajas competitivas sobre la competencia.
+Específicamente a nivel salud, la realización de encuestas logra identificar y medir necesidades sanitarias de la correspondiente población de estudio, conformando de tal manera un primer paso para la planificación de políticas de salubridad. Es por ello que se considera a esta metodología de obtención de datos como una herramienta imprescindible a la hora de identificar necesidades \cite{importanciaEncuestas}. Con la recopilación de dicha información, se llegan a tomar medidas tanto preventivas como informativas, logrando de esta forma una reducción en las enfermedades y muertes causadas por distintas epidemiologías por ejemplo, así como también una mejora en la calidad de vida, por supuesto que mediante la aplicación de una adecuada política de estado. Además, proporciona denominadores poblacionales útiles para el cálculo de tasas y estimaciones del número de personas a riesgo.
+\\
 
-Una disciplina que pertenece al aprendizaje maquinal, la cual incluye métodos para adquirir, procesar, analizar y comprender las imágenes del mundo real con el fin de producir información numérica o simbólica para que puedan ser tratados por un ordenador, se denomina visión artificial (\textbf{CV}: del inglés, \textit{computer vision}). Tal y como los humanos usamos nuestros ojos y cerebros para comprender el mundo que nos rodea, la CV trata de producir el mismo efecto para que los ordenadores puedan percibir y comprender una imagen o secuencia de imágenes y actuar según convenga en una determinada situación. Esta comprensión se consigue gracias a distintos campos como la geometría, la estadística, la física y otras disciplinas.
-
-El auge de las aplicaciones para dispositivos móviles ha traído consigo la necesidad de incorporar este tipo de tecnologías. La evolución de los teléfonos inteligentes y su uso masivo, hicieron que empresas de desarrollo de software se acoplen a esta demanda, ofreciendo productos y servicios para que todas las personas puedan utilizarlos en sus propios dispositivos. El área que comprende el procesamiento de imágenes y aprendizaje maquinal no escapa a esta ola tecnológica, por lo que un conjunto de bibliotecas que permiten el procesamiento de imágenes, empezaron a estar disponibles para su uso y adaptabilidad de una manera optimizada y preparada para que dispositivos de todo tipo de gama puedan aprovechar de sus beneficios. A continuación, se listan algunas aplicaciones destacadas que utilizan procesamiento de imágenes e inteligencia computacional:
-
+Algunos de los motivos que llevan a la realización de encuestas en el ámbito de la salud, se presentan a continuación:
 \begin{itemize}
 	
-	\item Google entrenó una red neuronal profunda que logró reconocer con buena precisión tanto rostros y cuerpos humanos como también  gatos en videos de YouTube, lo cual se obtuvo de forma no supervisada sin utilizar información de clases (es decir, nunca se le daba información de lo que estaba aprendiendo). 
+	\item Conocer problemas de salud percibida y conductas relacionadas a la salud de la	población.
 	
-	\item El sistema DeepFace de Facebook alcanzó una precisión de 97.35\% con redes neuronales profundas sobre el conjunto de datos \textit{Labeled Faces in the Wild} (LFW), reduciendo el error del actual estado del arte en más de un 27\% y acercándose a la precisión de un humano en reconocimiento de rostros (que es de aproximadamente un 97.53\%).
+	\item Conocer el patrón de utilización de servicios de salud tanto preventivos como curativos o de rehabilitación.
 	
-	\item Google, a través de su producto \textit{Google Photos}, ofrece una solución denominada \textit{Organize}, la cual realiza tareas de organización sobre las imágenes de sus usuarios. Ésta proporciona distintos conjuntos de imágenes basándose en características u objetos que tengan en común, como pueden ser perros, autos, el cielo, etc.
+	\item Análisis de la relación entre el estado de salud, las conductas relacionadas y la	utilización de servicios sanitarios con los factores socioeconómicos.
 	
-	\item La aplicación fotos, perteneciente al sistema operativo Windows 10, permite buscar texto en las imágenes. La misma utiliza una tecnología denominada OCR (reconocimiento óptico de caracteres), la cual permite detectar no sólo a la palabra, sino también la posición tiene en la imagen. 
+	\item Monitorizar y evaluar indicadores socio sanitarios.
 	
+	\item Comparaciones de zonas o avances en el tiempo de la población de estudio.
 	
 \end{itemize}
 
-Todos los ejemplos enumerados y la gran mayoría de soluciones, realizan el procesamiento de la información (texto, imágenes o videos) aprovechando los recursos que ofrece la "nuble" (\textit{cloud}). Para el usuario final, esto tiene un costo no menor, el cual significa aceptar que su información será compartida (y quizás utilizada) con la compañía que le esté brindando el servicio. Es por ello que una restricción principal para este proyecto fue decidir que la misma será \textit{on premise}, lo que significa que el procesamiento de la información se realizará exclusivamente en el dispositivo, sin la necesidad de establecer una conexión a Internet para poder aprovechar alguna de sus funcionalidades.
+Enfocándonos más precisamente en la Facultad de Ciencias Médicas de la Universidad Nacional del Litoral (\textit{FCM - UNL}), a
+la hora de realizar encuestas para obtener información de la población, actualmente se viene trabajando con las denominadas \textit{``salidas a terreno''}, es decir recorriendo diversos sectores o barrios y realizando dichas encuestas de la manera tradicional (\textit{``papel y lápiz''}).
+\\
+
+El empleo de ésta metodología en la forma tradicional trae aparejada una serie de dificultades, ya que la misma estará propensa a errores y se aumentará la dificultad de aplicarlo en grandes escalas. Esto se debe, por ejemplo, a los elevados costos de la transacción y al gran inconveniente del análisis de los datos, ya que los mismos, una vez obtenidos deben cargarse a una base de datos en forma manual, produciendo que ésta tarea resulte tediosa, se prolongue por mucho tiempo e introduzca posibles errores en la carga. Ésto lleva a una reducción del alcance de los formularios para no tener que lidiar con inconvenientes mencionados, generando una mayor tasa de error por sobre lo obtenido.
 
 %-------------------------------------------------------------------
 \section{Justificación}
 %-------------------------------------------------------------------
 \label{cap1:sec:justificacion}
 
-Lo que se busca en este proyecto es implementar una aplicación que asista al usuario en la tarea de organizar las imágenes de su dispositivo. Como etapa inicial, la aplicación provee una estructura de directorios mediante una metodología basada en algoritmos de visión artificial, formando grupos de imágenes según el grado de similitud que comparten. Luego, una vez realizado el procesamiento, el usuario podrá interactuar con el resultado (e.g eliminar un grupo obtenido, renombrar carpetas, ingresar en un grupo y eliminar alguna imagen en particular, etc.) para lograr la estructura/el agrupamiento que desee.
+Las tecnologías de la información y de la comunicación(TIC) han sido un pilar importante en la transformación del mundo contemporáneo, a través de los avances significativos a lo largo de los años. La humanidad ha evolucionado los modos de comunicar, de entretener, de trabajar, de negociar, de gobernar y de socializar, sobre la base de la difusión y uso de las TIC a escala global \cite{introduccionTICS}. Específicamente, la industria de los dispositivos móviles (smartphones, tablets, etc.), está atravesando un período de rápida transformación mediante el desarrollo de aplicaciones móviles las cuáles tienen la posibilidad de acceder a todas las características del hardware que posee el móvil, como por ejemplo el GPS, conexiones, cámara, etc.
+\\
+
+Por lo tanto, lo que se busca en éste proyecto es llevar a cabo el desarrollo de una aplicación móvil que digitalice las encuestas a realizar por la facultad de Ciencias Médicas de la UNL, logrando de esta forma subsanar muchos de los problemas mencionados anteriormente.
+\\
+
+La misma será realizada sobre la plataforma Android, teniendo en cuenta que a nivel nacional es una de las más utilizadas en relación a otros sistemas operativos como pueden ser iOS y Windows Phone. Esto se debe a que es un software de código abierto, accesible por todo el mundo \cite{androidImportancia} y a los menores costos de adquisición que poseen los dispositivos con dicha plataforma, quedando al alcance de cualquier persona o clase social. Por lo tanto, para la realización del proyecto se contará con un gran número de usuarios, teniendo en cuenta que con el avance tecnológico, hoy en día prácticamente todas las personas poseen un móvil. Argentina figura en el puesto 20 en cantidad de equipos con 50 millones de smartphones. Las razones que hacen de la tecnología móvil un fenómeno se deben a la caída en los precios de los equipos; mejoras de los servicios y mayor alcance de las redes. Este escenario hace que no sólo a nivel local sino también todo el mundo sea cada vez más asidua la comunicación a través de datos y de redes sociales \cite{smarthphonesImportancia}.
 
 
-La aplicación es de código abierto, con el fin de poder hacer una contribución a la comunidad del software libre y que pueda ser continuamente mejorada o versionada y personalizada en base a distintos desarrolladores que presenten interés por la misma. Como se dijo en la sección anterior, se propone que sea \textit{on premise} (i.e. el proceso se realiza únicamente en el dispositivo móvil) en lugar de ser un servicio \textit{cloud}. De esta manera se puede asegurar la confidencialidad de los datos que se manejan, al mismo tiempo lograr que el despliegue y mantenimiento del sistema sean aspectos más sencillos y económicos. 
-
-Por último, será implementada para la plataforma Android, dado que es un sistema operativo muy popular y gratuito. Esta decisión se basa en que, a nivel mundial, Android es el líder indiscutido por cantidad de usuarios, y lo mismo sucede en la Argentina, ya que se encuentra en el 85\% de los equipos, según datos del mercado. Además, es destacable que se trata de una plataforma de código abierto que brinda a los desarrolladores un amplio conjunto de herramientas de desarrollo y librerías a su disposición, las cuales a su vez cuentan con extensa documentación de respaldo.
 
 %-------------------------------------------------------------------
 \section{Objetivos}
