--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
@@ -1,6 +1,43 @@
+
 @misc{poblacionEncuestas,
 	title = {?` {{Q}}u{\'e} son las encuestas y para qu{\'e} sirven?},
 	author = {Edgar Trejo},
-howpublished = {\url{http://simomexico.com/encuestas/}},
-note = {Accedido: 12/12/2018}
+	howpublished = {\url{http://simomexico.com/encuestas/}},
+	note = {Accedido: 12/12/2018}
 }
+
+@article{importanciaEncuestas,
+	title={La importancia de la perspectiva de g{\'e}nero en las encuestas de salud},
+	author={Izabella Rohlfs},
+	journal={Gaceta Sanitaria},
+	volume={14},
+	number={2},
+	pages={146--153},
+	year={2000},
+	publisher={Grupo G{\'e}nero y Salud P{\'u}blica de SESPAS}
+}
+
+@book{introduccionTICS,
+	title={Informe de vigilancia tecnol{\'o}gica. Tendencia en las tecnolog{\'i}as m{\'o}viles y sus aplicaciones},
+	author={Eduardo Lizarralde},
+	year={2014},
+	publisher={Clarke, Modet \& Co, Espa'na}
+}
+
+@misc{androidImportancia,
+	title = {?` {{P}}or qu{\'e} Android es el rey de los Sistemas Operativos?},
+	author = {A. Martinez},
+	howpublished = {\url{http://www.abc.es/tecnologia/informatica/software/abci-google-android-sistemas-operativos-201604202207_noticia.html}},
+	note = {Accedido: 13/12/2018}
+}
+
+@misc{smarthphonesImportancia,
+	title = {Efecto Smartphone: las l{\'i}neas de celulares ya superan a la poblaci{\'o}n mundial.},
+	author = {Cronista},
+	howpublished = {\url{http://www.cronista.com/negocios/Efecto-smartphone-las-lineas-de-celulares-ya-superan-a-la-poblacion-mundial-20160307-0055.html}},
+	note = {Accedido: 13/12/2018}
+}
+
+
+
+
