Se completa justificacion

--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/01Capitulo1.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/01Capitulo1.tex
@@ -53,9 +53,23 @@ Las tecnologías de la información y de la comunicación(TIC) han sido un pilar im
 Por lo tanto, lo que se busca en éste proyecto es llevar a cabo el desarrollo de una aplicación móvil que digitalice las encuestas a realizar por la facultad de Ciencias Médicas de la UNL, logrando de esta forma subsanar muchos de los problemas mencionados anteriormente.
 \\
 
-La misma será realizada sobre la plataforma Android, teniendo en cuenta que a nivel nacional es una de las más utilizadas en relación a otros sistemas operativos como pueden ser iOS y Windows Phone. Esto se debe a que es un software de código abierto, accesible por todo el mundo \cite{androidImportancia} y a los menores costos de adquisición que poseen los dispositivos con dicha plataforma, quedando al alcance de cualquier persona o clase social. Por lo tanto, para la realización del proyecto se contará con un gran número de usuarios, teniendo en cuenta que con el avance tecnológico, hoy en día prácticamente todas las personas poseen un móvil. Argentina figura en el puesto 20 en cantidad de equipos con 50 millones de smartphones. Las razones que hacen de la tecnología móvil un fenómeno se deben a la caída en los precios de los equipos; mejoras de los servicios y mayor alcance de las redes. Este escenario hace que no sólo a nivel local sino también todo el mundo sea cada vez más asidua la comunicación a través de datos y de redes sociales \cite{smarthphonesImportancia}.
+La misma será realizada sobre la plataforma Android, teniendo en cuenta que a nivel nacional es una de las más utilizadas en relación a otros sistemas operativos como pueden ser iOS y Windows Phone. Esto se debe a que es un software de código abierto, accesible por todo el mundo \cite{androidImportancia} y a los menores costos de adquisición que poseen los dispositivos con dicha plataforma, quedando al alcance de cualquier persona o clase social. Por lo tanto, para la realización del proyecto se contará con un gran número de usuarios, teniendo en cuenta que hoy en día prácticamente todas las personas poseen un móvil. Argentina figura en el puesto 20 en cantidad de equipos con 50 millones de smartphones, donde el 85\% de ellos poseen sistema operativo Android. Las razones que hacen de la tecnología móvil un fenómeno se deben a la caída en los precios de los equipos; mejoras de los servicios y mayor alcance de las redes. Este escenario hace que no sólo a nivel local sino también todo el mundo sea cada vez más asidua la comunicación a través de datos y de redes sociales \cite{smarthphonesImportancia}.
+\\
 
+Es por ello que con la distribución de la aplicación se logrará tener un mayor acceso poblacional para la resolución de las encuestas desde sus dispositivos móviles, ya que la misma va a estar disponible para el público en general, pudiendo ser resueltas por personas a las que muy probablemente no sean alcanzadas en las \textit{``Salidas a Terreno''}. Cabe aclarar que a su vez se llevará a cabo un control adecuado que limite el acceso a todas las encuestas, para que de ésta forma los datos no sean tergiversados y que los obtenidos sean realmente de interés. 
+\\
 
+La aplicación a realizar constará de dos formatos a tener en cuenta: por un lado, se encontrarán los denominados \textit{``usuarios específicos''}, es decir los encuestadores (usuarios de la Facultad de Cs. Médicas), que mediante validaciones en el registro obtendrán permisos de administrador logrando llevar a cabo el alta, baja y modificación (ABM) de las encuestas, y resolver las mismas de manera indefinida (salidas a terreno). Por otro lado, están los denominados \textit{``usuarios comunes''} que son la población en general, los cuales podrán acceder a la aplicación y responder cada encuesta disponible en una sola ocasión. En ambos casos, junto a la resolución se almacenará el lugar de residencia del encuestado (latitud y longitud), obteniendo los datos geo-localizados gracias al componente hardware del GPS que poseen los móviles.
+\\
+
+Se llevarán a cabo distintos mecanismos de control con la finalidad de obtener datos útiles. En primer lugar, en relación a la geo-localización del usuario, con el fin de obtener los datos correspondientes a su localización de residencia, para el posterior análisis por zonas. Es decir, al responder la encuesta desde un dispositivo móvil, la persona no necesariamente puede resolverla desde su casa, por lo tanto se verificará que la misma se encuentre en su hogar, caso contrario se solicitará introducir manualmente la dirección de residencia, mediante el API de Google Maps.  Por otro lado, en cuanto a la resolución de encuestas por parte de "usuarios comunes? se permitirá a la hora de su creación introducir limitantes de resolución, como por ejemplo el sexo y la edad mínima del encuestado.
+\\
+
+Uno de las inconvenientes principales que vendría a solucionar la aplicación es la inmediatez para responder las encuestas y la obtención automática de los resultados, donde en el contexto mencionado sería muy importante para la toma de decisiones inmediatas en función de verdaderas prioridades. Además, se contará con un ahorro en la impresión de formularios para su posterior distribución, al responder las encuestas directamente desde un dispositivo electrónico, lo cual llevará a una menor cantidad de trabajo manual y evitar problemas mencionados anteriormente, como por ejemplo entender la escritura del encuestado. Se tendrá una mayor rapidez en el diseño y modificación de estos formularios, ya que por ejemplo, si de la manera tradicional se realizan los mismos y luego se determina que dichas preguntas no presentan de forma concreta la información que se requería analizar, se tendrían que volver a rediseñar, nuevamente llevar a cabo su impresión, distribución y procesamiento, lo cual demandaría el doble de tiempo.
+\\
+
+Se llevará a cabo el diseño y desarrollo de un Web Service, que será el encargado de comunicar y persistir los datos en base de datos mediante la aplicación móvil. Es importante que toda ésta información se encuentre alojada en un servicio externo para que la aplicación sea independiente a los datos y no quede atada a constantes actualizaciones. Posteriormente, éstos datos podrán exportarse
+en distintos formatos para que especialistas médicos y bio-estadísticos trabajen con ellos en los respectivos software de estadística que usan habitualmente, para luego una toma de decisiones.
 
 %-------------------------------------------------------------------
 \section{Objetivos}
