--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Cascaras/resumen.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Cascaras/resumen.tex
@@ -29,7 +29,7 @@ Con la finalidad de independizar los datos que representan el núcleo del proyect
 \\
 
 \smallskip
-\noindent \textbf{Palabras claves:} Encuestas, Aplicación Móvil, Web Service, Geo-Referencias, Epidemiología, GPS, Endpoint.
+\noindent \textbf{Palabras claves:} Encuestas, Dispositivo Móvil, Aplicación Móvil, Web Service, Geo-Referencias, Epidemiología, GPS, Endpoint.
 
 \newpage
 \thispagestyle{empty}
