--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
@@ -34,7 +34,7 @@
 @misc{smarthphonesImportancia,
 	title = {Efecto Smartphone: las l{\'i}neas de celulares ya superan a la poblaci{\'o}n mundial.},
 	author = {Cronista},
-	howpublished = {\url{http://www.cronista.com/negocios/Efecto-smartphone-las-lineas-de-celulares-ya-superan-a-la-poblacion-mundial-20160307-0055.html}},
+	howpublished = {\url{https://bit.ly/2rWYLGr}},
 	note = {Accedido: 13/12/2018}
 }
 
